--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -36,6 +36,7 @@ android {
         applicationId "com.example.acsapp"
         minSdkVersion 16
         targetSdkVersion 27
+        multiDexEnabled true
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -55,7 +56,8 @@ flutter {
 }
 
 dependencies {
-    implementation 'com.google.firebase:firebase-core:17.0.0'
+    implementation 'com.android.support:multidex:1.0.3'
+     implementation 'com.google.firebase:firebase-core:17.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
