--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -24,6 +24,26 @@ dependencies:
   country_pickers:
   firebase_database:
   firebase_storage:
+  cloud_firestore:
+  image_picker:
+  intl: ^0.15.8
+  google_sign_in:
+  firebase_auth:
+  path_provider:
+  auto_size_text:
+  cache_image:
+  google_maps_flutter: 
+  timeago:
+  shimmer:
+  video_player:
+  palette_generator:
+  flutter_widgets:
+  http:
+  uuid:
+  flutter_staggered_grid_view:
+  googleapis:
+  location:
+  googleapis_auth:
 
 dev_dependencies:
   flutter_test:
@@ -42,9 +62,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+     - assets/loader1.gif
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
